--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ name: Deploy
 on:
    push:
       branches:
-         - main
-         
+         - master
+
 jobs:
    deploy:
       runs-on: ubuntu-latest
